# recipemd-extract

./: .gitignore  README.md  pyproject.toml  recipe.py  recipemd-extract.py  recipemd.py  setup.py
plugins/: chefkoch.py  recipe_schema.py  seriouseats.py  wprm.py
recipemd_extract/: main.py
recipemd_extract/parsers/: recipe_schema.py  recipe_scrapers.py  wprm.py
recipemd_extract/plugins/: chefkoch.py  recipe_schema.py  recipe_scrapers.py  seriouseats.py  wprm.py
