[project]
name = "recipemd-extract"
version = "1.1.1"
description = "Extracts recipes from websites and saves them in the RecipeMD format"
readme = "README.md"
requires-python = ">=3.9,<4"
authors = [
  {name = "AberDerBart", email = "nonatz@web.de"},
]
maintainers = [
  {name = "AberDerBart", email = "nonatz@web.de"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Topic :: Text Processing :: Markup",
  "Operating System :: OS Independent",
]

dependencies = [
  "recipemd~=4.1.0",
  "beautifulsoup4~=4.12.0",
  "requests~=2.32.0",
  "html5lib==1.1",
  "scrape-schema-recipe==0.2.2",
  "recipe-scrapers==15.1.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "check-manifest",
  "flake8",
  "flake8-bugbear",
  "flake8-pyproject",
  "isort",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.urls]
Source = "https://github.com/AberDerBart/recipemd-extract"

[project.scripts]
recipemd-extract = "recipemd_extract.main:main"

[tool.check-manifest]
ignore = [
  ".*",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.flake8]
ignore = "E203, E231, E266, E501, W503, W605, B028"
max-line-length = 160
